<resources>
    <string name="app_name">Scanner</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate">Generate</string>
    <string name="qr_code">QR code</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="share_as_text">Share as text</string>
    <string name="save_as_qr_code">Save QR </string>

    <string name="connect">Connect</string>
    <string name="copy_password">Copy password</string>
    <string name="history">History</string>
    <string name="wifi">Wifi</string>
    <string name="WIFI">WIFI</string>
    <string name="url">URL</string>
    <string name="text">TEXT</string>
    <string name="email">EMAIL</string>
    <string name="sms">SMS</string>
    <string name="phone">PHONE</string>
    <string name="calendar">CALENDAR</string>
    <string name="location">LOCATION</string>
    <string name="contact">CONTACT</string>
    <string name="qr_codes">QR Codes</string>
    <string name="send_sms">Send Sms</string>
    <string name="share_as_qr_code">"Share QR "</string>
    <string name="product_barcodes">Product Barcodes</string>
    <string name="ean_8">EAN-8</string>
    <string name="upc_e">UPC_E</string>
    <string name="upc_a">UPC_A</string>
    <string name="ean_13">EAN-13</string>
    <string name="rss_14">RSS-14</string>
    <string name="other_barcodes">Other Formats</string>
    <string name="pdf_417">PDF-417</string>
    <string name="code_39">CODE-39</string>
    <string name="code_93">CODE-93</string>
    <string name="code_128">CODE-128</string>
    <string name="itf">ITF</string>
    <string name="rss_expanded">RSS-EXPANDED</string>
    <string name="data_matrix">DATA-MATRIX</string>
    <string name="confirm">confirm</string>
    <string name="createtext">Text</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="emailaddress">Email</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="about_me">About Me</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="myinfo">MYINFO</string>
    <string name="subject">Subject</string>
    <string name="company">Company</string>
    <string name="network_name">Network Name</string>
    <string name="pass">Password</string>
    <string name="encyption">Encyption</string>
    <string name="no_encryption">No Encryption</string>
    <string name="todo">TODO</string>
    <string name="aztec">AZTEC</string>
    <string name="codabar">CODABAR</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="web_search">Web search</string>
    <string name="event">Add event</string>
    <string name="call">Call</string>
    <string name="addprsn">Add person</string>
    <string name="send_email">Send email</string>
    <string name="openlink">Open link</string>
    <string name="activity_history_list">activity_history_list</string>


    <string-array name="generator_array">
        <item>Text</item>
        <item>E-mail</item>
        <item>URL</item>
        <item>Phone number</item>
        <item>SMS</item>
        <item>Geo location</item>
        <item>MeCard</item>
        <item>BizCard</item>
        <item>Wifi</item>
        <item>VCard</item>
        <item>Market</item>
    </string-array>

    <string-array name="content_types">
        <!-- Array used by utility classes to convert internal code types into localized strings -->
        <item>UNDEFINED</item>
        <item>Text</item>
        <item>E-Mail</item>
        <item>Phone number</item>
        <item>SMS</item>
        <item>MMS</item>
        <item>URL</item>
        <item>Wifi</item>
        <item>VCard</item>
        <item>MeCard</item>
        <item>BizCard</item>
        <item>Market</item>
        <item>Contact</item>
        <item>Geo location</item>
        <item>Address book</item>
        <item>Product</item>
        <item>Calendar</item>
        <item>ISBN</item>
        <item>Vehicle Identification Number (VIN)</item>
    </string-array>
</resources>