<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/framelayout"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="3.5dp"
        android:layout_marginTop="3dp"
        android:layout_below="@id/framelayout"
        android:background="@color/fade_white"/>

    <LinearLayout
        android:id="@+id/otheroptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/framelayout"
        android:layout_marginTop="5dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/rateus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/rate_us"
                android:textColor="?android:textColorPrimaryDisableOnly"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cardview_dark_background" />

        <LinearLayout
            android:id="@+id/shareapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/shareapp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/share_app"
                android:textColor="?android:textColorPrimaryDisableOnly"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cardview_dark_background" />

        <LinearLayout
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/feedback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/send_feedback"
                android:textColor="?android:textColorPrimaryDisableOnly"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cardview_dark_background" />

        <LinearLayout
            android:id="@+id/privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:padding="18dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/privacy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/privacy_policy"
                android:textColor="?android:textColorPrimaryDisableOnly"
                android:textSize="15sp"
                android:textStyle="normal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/cardview_dark_background" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btmnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="0dp"
        app:elevation="0dp"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/draweritems" />

</RelativeLayout>