<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createcodes.Wifi">


    <LinearLayout
        android:id="@+id/inputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="80dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editWifiSSIDInputLayout"
            style="@style/AppTheme.InputTextlayout.anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/networkname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/network_name"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordlayout"
            style="@style/AppTheme.InputTextlayout.anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editWifiEncryptionInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="32dp">

            <AutoCompleteTextView
                android:id="@+id/editWifiEncryption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/encyption"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/outputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/generated_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:background="@color/fade_white"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_below="@id/generated_qr"
            android:layout_toStartOf="@id/share_generated_qr"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/save"
            android:scaleType="centerInside"
            android:background="@drawable/background_circle"
            android:id="@+id/save_generated_qr"
            />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/generated_qr"
            android:layout_centerHorizontal="true"
            android:src="@drawable/share"
            android:scaleType="centerInside"
            android:background="@drawable/background_circle_orange"
            android:id="@+id/share_generated_qr"
            />

    </RelativeLayout>

</RelativeLayout>